Fixed add Item categories page alignment issues

--- a/src/app/pages/features/items/item-add/item-add.page.scss
+++ b/src/app/pages/features/items/item-add/item-add.page.scss
@@ -23,6 +23,23 @@
 	padding-bottom: 71px;
 	margin-top: 0px !important;
 }
+.main-view{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 184px;
+    overflow: hidden;
+    border-radius: 8px;
+    border: 1px solid #E3E7EC;
+    background: #fff;
+    margin-bottom: 15px;
+	img{
+		width: 100%;
+		height: 100%;
+		object-fit: contain;
+	}
+}
 
 .roleWrapper {
 	padding: 0 !important;
@@ -62,7 +79,7 @@
 	}
 	.roles {
 	  display: flex;
-	  padding: 12px 114px 12px 16px;
+	  padding: 12px 16px 12px 16px;
 	  align-items: center;
 	  gap: 16px;
 	  background: #f6f8fe;
@@ -86,6 +103,13 @@
 		white-space: nowrap;
 		text-align: start;
 		text-transform: capitalize;
+		text-overflow: ellipsis;
+		overflow: hidden;
 	  }
+	}
+	.inner-roles{
+		margin-bottom: 0;
+		padding: 7px 20px 7px 0px !important;
+		width: 100%;
 	}
   }
